// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicPure component match expected snapshot with parent forum information 1`] = `
<div
  className="default-Topic-wrapper"
>
  <Jss(RowPure)
    className=""
    reverse={false}
  >
    <Jss(ColumnPure)
      className=""
      lg=""
      lgOffset=""
      md=""
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <Jss(RowPure)
        className=""
        reverse={false}
      >
        <Jss(ColumnPure)
          className=""
          lg={9}
          lgOffset=""
          md={7}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <Jss(RowPure)
            className="default-Topic-centerRow"
            reverse={false}
          >
            <Jss(ColumnPure)
              className="default-Topic-titleContainer"
              lg={8}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs={12}
              xsOffset=""
            >
              <Jss(RowPure)
                className=""
                reverse={false}
              >
                <Jss(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md=""
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs={12}
                  xsOffset=""
                >
                  <Jss(LinkPure)
                    className="default-Topic-titleStyle"
                    to="/Topic/1"
                  >
                    Как деактивировать бомбу
                  </Jss(LinkPure)>
                </Jss(ColumnPure)>
              </Jss(RowPure)>
              <Jss(RowPure)
                className="paginationLastActive"
                reverse={false}
              >
                <Jss(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md=""
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs={12}
                  xsOffset=""
                >
                  <Jss(PaginationListPure)
                    containerId={1}
                    containerName="Topic"
                    pageNumber={0}
                    pageSize={20}
                    shortList={true}
                    totalItemsCount={8}
                  />
                </Jss(ColumnPure)>
              </Jss(RowPure)>
              <Jss(RowPure)
                className="default-Topic-textSmallMd"
                reverse={false}
              >
                <Jss(ColumnPure)
                  className=""
                  lg={12}
                  lgOffset=""
                  md={7}
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs={12}
                  xsOffset=""
                >
                  <span
                    className="default-Topic-parentForumWrapper"
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 25,
                          "value": "Forum:",
                        }
                      }
                      untermedPostfix=":"
                    />
                    <Jss(LinkPure)
                      className="default-Topic-parentForumTitleStyle"
                      to="/Forum/10"
                    >
                      Общие вопросы
                    </Jss(LinkPure)>
                  </span>
                </Jss(ColumnPure)>
                <Jss(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md={5}
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs=""
                  xsOffset=""
                >
                  <Jss(HiddenPure)
                    className="default-Topic-noWrap"
                    lg="up"
                    md=""
                    sm="down"
                    xl=""
                    xs=""
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 2,
                          "value": "Posts",
                        }
                      }
                      untermedPostfix=":"
                    />
                    215
                  </Jss(HiddenPure)>
                </Jss(ColumnPure)>
              </Jss(RowPure)>
            </Jss(ColumnPure)>
            <Jss(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <Jss(HiddenPure)
                className=""
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                215
              </Jss(HiddenPure)>
            </Jss(ColumnPure)>
            <Jss(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <Jss(HiddenPure)
                className=""
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                1315
              </Jss(HiddenPure)>
            </Jss(ColumnPure)>
          </Jss(RowPure)>
        </Jss(ColumnPure)>
        <Jss(ColumnPure)
          className=""
          lg={3}
          lgOffset=""
          md={5}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <Jss(RowPure)
            className="default-Topic-heightFull"
            reverse={false}
          >
            <Jss(ColumnPure)
              className="default-Topic-lastPostInfoStyle"
              lg={10}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs={12}
              xsOffset=""
            >
              <UserName
                className=""
                color="#00AA00"
                id={4}
                name="Buba"
              />
              <Jss(HiddenPure)
                className=""
                lg="up"
                md=""
                sm=""
                xl=""
                xs=""
              >
                <Connect(Term)
                  doNotTerm={true}
                  indentAfter={true}
                  indentBefore={true}
                  spaceAfter={true}
                  spaceBefore={true}
                  untermedPostfix="-"
                />
              </Jss(HiddenPure)>
              <Connect(RelativeDateTime)
                relativeDateTime={2016-09-19T10:42:32.000Z}
              />
            </Jss(ColumnPure)>
            <Jss(ColumnPure)
              className=""
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <Jss(HiddenPure)
                className="default-Topic-lastPostInfoStyle"
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                <Jss(AvatarPure)
                  avatarUrl="http://i70.fastpic.ru/big/2015/0628/36/ccbb1e2cb8ba8dbd379a6a12dc6b8336.jpg"
                  className=""
                  id={4}
                  size={2.5}
                />
              </Jss(HiddenPure)>
            </Jss(ColumnPure)>
          </Jss(RowPure)>
        </Jss(ColumnPure)>
      </Jss(RowPure)>
    </Jss(ColumnPure)>
  </Jss(RowPure)>
  <div
    className="default-Topic-separator"
  />
</div>
`;

exports[`TopicPure component match expected snapshot without parent forum information 1`] = `
<div
  className="default-Topic-wrapper"
>
  <Jss(RowPure)
    className=""
    reverse={false}
  >
    <Jss(ColumnPure)
      className=""
      lg=""
      lgOffset=""
      md=""
      mdOffset=""
      sm=""
      smOffset=""
      xl=""
      xlOffset=""
      xs={12}
      xsOffset=""
    >
      <Jss(RowPure)
        className=""
        reverse={false}
      >
        <Jss(ColumnPure)
          className=""
          lg={9}
          lgOffset=""
          md={7}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <Jss(RowPure)
            className="default-Topic-centerRow"
            reverse={false}
          >
            <Jss(ColumnPure)
              className="default-Topic-titleContainer"
              lg={8}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs={12}
              xsOffset=""
            >
              <Jss(RowPure)
                className=""
                reverse={false}
              >
                <Jss(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md=""
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs={12}
                  xsOffset=""
                >
                  <Jss(LinkPure)
                    className="default-Topic-titleStyle"
                    to="/Topic/1"
                  >
                    Как деактивировать бомбу
                  </Jss(LinkPure)>
                </Jss(ColumnPure)>
              </Jss(RowPure)>
              <Jss(RowPure)
                className="paginationTopic"
                reverse={false}
              >
                <Jss(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md=""
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs={12}
                  xsOffset=""
                >
                  <Jss(PaginationListPure)
                    containerId={1}
                    containerName="Topic"
                    pageNumber={0}
                    pageSize={20}
                    shortList={true}
                    totalItemsCount={8}
                  />
                </Jss(ColumnPure)>
              </Jss(RowPure)>
              <Jss(RowPure)
                className="default-Topic-textSmallMd"
                reverse={false}
              >
                <Jss(ColumnPure)
                  className=""
                  lg=""
                  lgOffset=""
                  md={5}
                  mdOffset=""
                  sm=""
                  smOffset=""
                  xl=""
                  xlOffset=""
                  xs=""
                  xsOffset=""
                >
                  <Jss(HiddenPure)
                    className="default-Topic-noWrap"
                    lg="up"
                    md=""
                    sm="down"
                    xl=""
                    xs=""
                  >
                    <Connect(Term)
                      spaceAfter={true}
                      term={
                        Object {
                          "id": 2,
                          "value": "Posts",
                        }
                      }
                      untermedPostfix=":"
                    />
                    215
                  </Jss(HiddenPure)>
                </Jss(ColumnPure)>
              </Jss(RowPure)>
            </Jss(ColumnPure)>
            <Jss(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <Jss(HiddenPure)
                className=""
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                215
              </Jss(HiddenPure)>
            </Jss(ColumnPure)>
            <Jss(ColumnPure)
              className="default-Topic-centerRow"
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <Jss(HiddenPure)
                className=""
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                1315
              </Jss(HiddenPure)>
            </Jss(ColumnPure)>
          </Jss(RowPure)>
        </Jss(ColumnPure)>
        <Jss(ColumnPure)
          className=""
          lg={3}
          lgOffset=""
          md={5}
          mdOffset=""
          sm=""
          smOffset=""
          xl=""
          xlOffset=""
          xs={12}
          xsOffset=""
        >
          <Jss(RowPure)
            className="default-Topic-heightFull"
            reverse={false}
          >
            <Jss(ColumnPure)
              className="default-Topic-lastPostInfoStyle"
              lg={10}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs={12}
              xsOffset=""
            >
              <UserName
                className=""
                color="#00AA00"
                id={4}
                name="Buba"
              />
              <Jss(HiddenPure)
                className=""
                lg="up"
                md=""
                sm=""
                xl=""
                xs=""
              >
                <Connect(Term)
                  doNotTerm={true}
                  indentAfter={true}
                  indentBefore={true}
                  spaceAfter={true}
                  spaceBefore={true}
                  untermedPostfix="-"
                />
              </Jss(HiddenPure)>
              <Connect(RelativeDateTime)
                relativeDateTime={2016-09-19T10:42:32.000Z}
              />
            </Jss(ColumnPure)>
            <Jss(ColumnPure)
              className=""
              lg={2}
              lgOffset=""
              md=""
              mdOffset=""
              sm=""
              smOffset=""
              xl=""
              xlOffset=""
              xs=""
              xsOffset=""
            >
              <Jss(HiddenPure)
                className="default-Topic-lastPostInfoStyle"
                lg=""
                md="down"
                sm=""
                xl=""
                xs=""
              >
                <Jss(AvatarPure)
                  avatarUrl="http://i70.fastpic.ru/big/2015/0628/36/ccbb1e2cb8ba8dbd379a6a12dc6b8336.jpg"
                  className=""
                  id={4}
                  size={2.5}
                />
              </Jss(HiddenPure)>
            </Jss(ColumnPure)>
          </Jss(RowPure)>
        </Jss(ColumnPure)>
      </Jss(RowPure)>
    </Jss(ColumnPure)>
  </Jss(RowPure)>
  <div
    className="default-Topic-separator"
  />
</div>
`;
